# lantern-tech-test

./: Makefile  PDF_SERVICE_DOCS.md  README.md  pyproject.toml
data/: database.csv
src/: auth.py  database.py  logic.py  main.py  models.py  pdf_service.py  tests.py
tests/: __init__.py
tests/api/: test_foo.py  test_validate_company_data.py
tests/logic/: test_compare_two_versions_of_data.py
